--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Octopus{% endblock %}
+{% block title %}Genus {{ name }}{% endblock %}
 
 {% block body %}
 <h1>The genus: {{ name }}</h1>
