--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -13,7 +13,7 @@
                 <dt>Known Species:</dt>
                 <dd>289</dd>
                 <dt>Fun Fact:</dt>
-                <dd>Octopuses can change the color of their body in just three-tenths of a second!</dd>
+                <dd>{{ funFact }}</dd>
             </dl>
         </div>
     </div>
@@ -23,13 +23,13 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/rgit eact.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
     <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
     <script type="text/babel">
-        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}'
+        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
         React.render(
             <NoteSection url={ notesUrl }/>,
             document.getElementById('js-notes-wrapper')
