--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -13,7 +13,7 @@
                 <dt>Known Species:</dt>
                 <dd>289</dd>
                 <dt>Fun Fact:</dt>
-                <dd>{{ funFact }}</dd>
+                <dd>{{ funFact|raw }}</dd>
             </dl>
         </div>
     </div>
@@ -29,7 +29,7 @@
 
     <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
     <script type="text/babel">
-        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
+        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}'
         React.render(
             <NoteSection url={ notesUrl }/>,
             document.getElementById('js-notes-wrapper')
