--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -14,6 +14,8 @@
                 <dd>{{ genus.speciesCount|number_format }}</dd>
                 <dt>Fun Fact:</dt>
                 <dd>{{ genus.funFact|raw }}</dd>
+                <dt>Recent Note</dt>
+                <dd>{{ recentNoteCount }}</dd>
             </dl>
         </div>
     </div>
