--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -13,7 +13,7 @@
                 <dt>Known Species:</dt>
                 <dd>{{ genus.speciesCount|number_format }}</dd>
                 <dt>Fun Fact:</dt>
-                <dd>{{ funFact }}</dd>
+                <dd>{{ genus.funFact|markdownify }}</dd>
                 <dt>Recent Note</dt>
                 <dd>{{ recentNoteCount }}</dd>
             </dl>
