--- a/app/Resources/views/admin/genus/new.html.twig
+++ b/app/Resources/views/admin/genus/new.html.twig
@@ -11,7 +11,9 @@
 
     <script>
         $(document).ready(function () {
-            $('.js-datepicker').datepicker();
+            $('.js-datepicker').datepicker({
+                format: 'yyyy-mm-dd'
+            });
         })
     </script>
 {% endblock %}
