--- a/app/Resources/views/main/homepage.html.twig
+++ b/app/Resources/views/main/homepage.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 
-    <h1>Welcome!</h1>
+    <h1 class="page-header text-center">
+        Welcome
+        {{ app.user ? app.user.email : 'Aquanauts' }}!
+    </h1>
 
 {% endblock %}
